deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: apps
spec:
  selector:
    app: hello-world
  ports:
    - port: 80
      targetPort: 8080
